--- a/packages/core/src/components/menu-avatar/menu-avatar.scss
+++ b/packages/core/src/components/menu-avatar/menu-avatar.scss
@@ -16,11 +16,17 @@
   @include ix-component;
   display: block;
   position: relative;
+  margin-bottom: 0.5rem;
+  margin-right: 0.75rem;
 
   .avatar {
+    all: unset;
+    box-sizing: border-box;
+
     display: flex;
     align-items: center;
     height: 2.5rem;
+    width: 100%;
     max-height: 2.5rem;
     padding-left: 0.25rem;
     margin-left: 0.41rem;
@@ -79,5 +85,9 @@
       background-color: var(--theme-avatar-btn--background--active);
       color: var(--theme-avatar-btn--color--active);
     }
+  }
+
+  .avatar:focus-visible {
+    outline: 1px solid var(--theme-color-focus-bdr);
   }
 }
