fix(core/menu): a-tag styling

--- a/packages/core/src/components/menu-category/menu-category.scss
+++ b/packages/core/src/components/menu-category/menu-category.scss
@@ -62,3 +62,10 @@
 :host(.expanded) {
   background-color: var(--theme-color-ghost--active);
 }
+
+:host {
+  ::slotted(a[href]) {
+    text-decoration: none !important;
+    height: 2.5rem;
+  }
+}
