fix(core/pushcard): use std-text as default color

--- a/packages/core/src/components/card-accordion/card-accordion.scss
+++ b/packages/core/src/components/card-accordion/card-accordion.scss
@@ -108,6 +108,10 @@ $expand-content-height: 15rem;
     border-bottom-left-radius: var(--theme-default-border-radius);
     border-bottom-right-radius: var(--theme-default-border-radius);
   }
+
+  ::slotted(*) {
+    color: var(--theme-color-std-text);
+  }
 }
 
 :host(.show) {
