--- a/packages/core/src/components/button/button-mixin.scss
+++ b/packages/core/src/components/button/button-mixin.scss
@@ -8,7 +8,7 @@
  */
 
 @import 'common-variables';
-@import 'mixins/fonts';
+@import 'legacy/mixins/fonts';
 @import 'mixins/shadow-dom/component';
 @import 'mixins/hover';
 
