--- a/packages/core/src/components/map-navigation-overlay/map-navigation-overlay.scss
+++ b/packages/core/src/components/map-navigation-overlay/map-navigation-overlay.scss
@@ -7,7 +7,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 @import 'common-variables';
-@import 'fonts';
+@import 'legacy/fonts';
 @import 'mixins/text-truncation';
 
 :host {
