--- a/packages/core/scss/components/_modal.scss
+++ b/packages/core/scss/components/_modal.scss
@@ -7,7 +7,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-@import './mixins/fonts';
+@import 'legacy/mixins/fonts';
 
 .modal {
   --bs-modal-footer-gap: 1rem;
