--- a/packages/core/src/components/menu/burger-menu.scss
+++ b/packages/core/src/components/menu/burger-menu.scss
@@ -7,7 +7,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 @import 'common-variables';
-@import 'components/buttons';
+@import 'legacy/components/buttons';
 @import 'mixins/hover';
 @import 'mixins/shadow-dom/component';
 
