--- a/packages/core/src/components/time-picker/time-picker.scss
+++ b/packages/core/src/components/time-picker/time-picker.scss
@@ -13,7 +13,7 @@
 :host {
   @include ix-component;
 
-  @import 'components/forms';
+  @import 'legacy/components/forms';
 
   .header {
     display: flex;
