--- a/packages/core/scss/legacy/_fonts.scss
+++ b/packages/core/scss/legacy/_fonts.scss
@@ -7,7 +7,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-@import './mixins/fonts';
+@import 'legacy/mixins/fonts';
 
 .text-xs {
   @include text-xs;
