--- a/packages/core/scss/legacy/components/_dropdown.scss
+++ b/packages/core/scss/legacy/components/_dropdown.scss
@@ -7,7 +7,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-@import '../mixins/hover';
+@import 'mixins/hover';
 
 .dropdown-group {
   margin: 0.687rem;
