--- a/packages/core/src/components/expanding-search/expanding-search.scss
+++ b/packages/core/src/components/expanding-search/expanding-search.scss
@@ -7,7 +7,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 @import 'common-variables';
-@import 'components/forms';
+@import 'legacy/components/forms';
 @import 'mixins/shadow-dom/component';
 @import 'mixins/hover';
 @import 'mixins/text-truncation';
