--- a/packages/core/src/components/split-button/split-button.scss
+++ b/packages/core/src/components/split-button/split-button.scss
@@ -7,7 +7,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 @import 'mixins/shadow-dom/component';
-@import 'components/button-group';
+@import 'legacy/components/button-group';
 
 :host {
   @include ix-component;
