--- a/packages/documentation/src/components/ThemeFonts/ThemeFonts.css
+++ b/packages/documentation/src/components/ThemeFonts/ThemeFonts.css
@@ -10,13 +10,20 @@
 .Theme__Fonts .Section {
   display: flex;
   flex-direction: row;
-  height: 4.5rem;
+  min-height: 4.5rem;
+  height: auto;
+  padding: 0.25rem 0;
   border-bottom: var(--theme-x-weak-bdr-1);
   align-items: center;
 }
 
+.Theme__Fonts .Code {
+  margin: 1.5rem 0;
+}
+
 .Theme__Fonts .Copy__Icon {
   opacity: 0;
+  padding: 0;
 }
 
 .Theme__Fonts .Section:hover .Copy__Icon {
