--- a/packages/core/scss/theme/legacy-classic-dark/_fontFamilies.scss
+++ b/packages/core/scss/theme/legacy-classic-dark/_fontFamilies.scss
@@ -3,6 +3,7 @@
  */
 :root {
   .theme-legacy-classic-dark {
-      --theme-siemens-sans: Siemens Sans;
+      --theme-font-code: JetBrains Mono;
+      --theme-font-sans: Arial;
   }
 }
