--- a/packages/core/scss/mixins/_font.scss
+++ b/packages/core/scss/mixins/_font.scss
@@ -19,10 +19,8 @@
   $text-decoration: none,
   $font-family: Siemens Sans
 ) {
-  color: var(--theme-color-std-text);
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: $font-family, system-ui, -apple-system, Arial, Helvetica,
-    sans-serif;
+  font-family: $font-family, Siemens Sans, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-size: #{$size};
   line-height: #{$line-height};
