--- a/packages/documentation/src/components/ThemeShadows/ThemeShadows.css
+++ b/packages/documentation/src/components/ThemeShadows/ThemeShadows.css
@@ -10,13 +10,16 @@
 .Theme__Shadows .Section {
   display: flex;
   flex-direction: row;
-  height: 4.5rem;
+  min-height: 4.5rem;
+  height: auto;
+  padding: 0.25rem 0;
   border-bottom: var(--theme-x-weak-bdr-1);
   align-items: center;
 }
 
 .Theme__Shadows .Copy__Icon {
   opacity: 0;
+  padding: 0;
 }
 
 .Theme__Shadows .Section:hover .Copy__Icon {
