--- a/packages/core/src/components/menu-avatar/menu-avatar.scss
+++ b/packages/core/src/components/menu-avatar/menu-avatar.scss
@@ -16,6 +16,7 @@
   @include ix-component;
   display: block;
   position: relative;
+  margin-bottom: 0.5rem;
   margin-right: 0.75rem;
 
   .avatar {
