--- a/packages/core/scss/components/form/_input.scss
+++ b/packages/core/scss/components/form/_input.scss
@@ -7,12 +7,12 @@
  * LICENSE file in the root directory of this source tree.
  */
 @import 'common-variables';
-@import 'mixins/fonts';
+@import 'mixins/font';
 
 @mixin element-input($feature-read-only: true) {
   &,
   &:-webkit-autofill {
-    @include text-default;
+    @include typography-body;
     min-height: 2rem;
     width: 100%;
     padding: 0.25rem 0.5rem;
@@ -107,7 +107,7 @@
   input ~ .invalid-feedback {
     display: none;
 
-    @include text-default;
+    @include typography-body;
   }
 
   form {
