--- a/packages/core/src/components/my-component/my-component.scss
+++ b/packages/core/src/components/my-component/my-component.scss
@@ -10,11 +10,9 @@
 @import 'common-variables';
 
 :host {
-}
-
-ix-col {
-  background-color: #135d54;
-  border: solid 1px #fff;
-  color: #fff;
-  text-align: center;
+  display: block;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  padding: 0rem 0rem 0rem 0rem;
 }
