--- a/packages/core/src/components/slider/slider.scss
+++ b/packages/core/src/components/slider/slider.scss
@@ -89,26 +89,34 @@
 
 :host {
   @include ix-component;
-  display: block;
-
-  height: 2rem;
-
+  display: flex;
+  flex-direction: column;
+  min-height: 2rem;
   --thumb-size: 1rem;
   --value: 0;
   --trace-start: 0;
   --trace-end: 0;
   --trace-reference: 0;
+  --trace-reference-color: var(--theme-color-8);
+  --trace-color: var(--theme-color-dynamic);
+  --tick-color: var(--theme-color-5);
+  --tick-color--active: var(--theme-color-dynamic);
 
   input[type='range'] {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
     appearance: none;
     background: transparent;
     cursor: pointer;
     width: 100%;
+    height: 1rem;
     margin: 0;
-    position: relative;
   }
 
-  input[type='range']::before {
+  // Trace line
+  input[type='range'].trace::before {
     content: '';
     position: absolute;
     display: block;
@@ -126,7 +134,7 @@
     );
 
     height: 4px;
-    background-color: var(--theme-color-dynamic);
+    background-color: var(--trace-color);
     top: 50%;
     transform: translateY(-50%);
   }
@@ -138,7 +146,7 @@
     display: block;
     width: 2px;
     height: 16px;
-    background-color: var(--theme-color-8);
+    background-color: var(--trace-reference-color);
     top: 50%;
     transform: translateY(-50%);
     left: calc(
@@ -148,7 +156,7 @@
   }
 
   @include track() {
-    background: var(--theme-color-component-1);
+    background: transparent;
     height: 0.25rem;
   }
 
@@ -164,10 +172,13 @@
   }
 
   @include thumb-hover() {
+    transform: scale(1.2);
     background-color: var(--theme-color-dynamic);
   }
 
   @include thumb-active() {
+    transform: scale(1.2);
+
     background-color: var(--theme-color-dynamic);
   }
 
@@ -178,58 +189,102 @@
   }
 
   /* style datalist */
-  input[type='range'] + datalist {
+  .ticks {
     display: flex;
-  }
-  input[type='range'] + datalist option {
-    display: inline-block;
     position: relative;
-    width: calc((100% - 12px) / (var(--list-length, 5) - 1));
-    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
   }
-  input[type='range'] + datalist option:first-child {
-    width: calc((100% - 12px) / ((var(--list-length, 5) - 1) * 2) + 8px);
-    text-align: left;
-  }
-  input[type='range'] + datalist option:last-child {
-    width: calc((100% - 12px) / ((var(--list-length, 5) - 1) * 2) + 8px);
-    text-align: right;
-  }
-
-  input[type='range'] + datalist option::before {
-    content: '';
+  .ticks .tick {
     display: block;
     position: absolute;
-    width: 0.5rem;
-    height: 0.5rem;
-    background-color: var(--theme-color-5);
+    width: 8px;
+    height: 8px;
+    background-color: var(--tick-color);
     border-radius: 100px;
-    pointer-events: none;
-    top: -1.25rem;
+    top: 50%;
+    transform: translateY(-50%);
+    left: calc(var(--tick-value) * 100% - 4px);
   }
 
-  input[type='range'] + datalist option.marker-active::before {
-    background-color: var(--theme-color-dynamic);
+  .ticks .tick.tick-active {
+    background-color: var(--tick-color--active);
   }
 
-  input[type='range']
-    + datalist
-    option:not(:first-child):not(:last-child)::before {
-    left: 50%;
-    transform: translateX(-50%);
+  .slider {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 1.5rem;
   }
 
-  input[type='range'] + datalist option:first-child::before {
-    left: 4px;
+  .track {
+    position: absolute;
+    background-color: var(--theme-color-component-1);
+    height: 4px;
+    width: calc(100% - 1rem);
+    margin-left: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0px;
   }
 
-  input[type='range'] + datalist option:last-child::before {
-    right: 4px;
+  .thumb {
+    display: block;
+    position: absolute;
+    background-color: transparent;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 100px;
+    left: 0px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .hide-tooltip {
+    display: none;
+  }
+
+  .label {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 0.5rem;
+
+    min-height: 0px;
+  }
+
+  .label-start {
+    margin-left: 0.5rem;
+  }
+
+  .label-end {
+    margin-right: 0.5rem;
+  }
+
+  .label-error {
+    margin-left: 0.5rem;
+  }
+}
+
+:host(.error) {
+  --trace-color: var(--theme-color-alarm);
+  --tick-color--active: var(--theme-color-alarm);
+
+  @include thumb() {
+    background-color: var(--theme-color-alarm);
   }
 }
 
 :host(.disabled) {
   pointer-events: none;
+
+  --trace-color: var(--theme-color-7);
+  --tick-color: var(--theme-color-7);
+  --tick-color--active: var(--theme-color-7);
+  --trace-reference-color: var(--theme-color-7);
 
   @include thumb() {
     background-color: var(--theme-color-7);
