--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -152,7 +152,7 @@ $menu-expanded-width: 16rem;
   }
 }
 
-:host(.mode-small) {
+:host(.breakpoint-sm) {
   .menu:not(.expanded) {
     width: 0;
   }
@@ -171,7 +171,7 @@ $menu-expanded-width: 16rem;
   }
 }
 
-:host(.mode-large) {
+:host(.breakpoint-lg) {
   position: relative;
 
   .menu.expanded {
