--- a/packages/core/scss/ix.scss
+++ b/packages/core/scss/ix.scss
@@ -54,6 +54,7 @@ body {
   @include typography-body();
   color: var(--theme-color-std-text);
   background-color: var(--theme-color-1);
+  margin: 0;
 }
 
 body:not(.disable-scrollbar) {
