--- a/packages/core/src/components/category-filter/category-filter.scss
+++ b/packages/core/src/components/category-filter/category-filter.scss
@@ -12,6 +12,7 @@
 @import 'mixins/hover';
 @import 'mixins/shadows';
 @import 'mixins/text-truncation';
+@import 'legacy/components/forms';
 
 :host {
   display: block;
