--- a/packages/core/src/components/input-group/input-group.scss
+++ b/packages/core/src/components/input-group/input-group.scss
@@ -13,9 +13,9 @@
 
   position: relative;
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
   align-items: stretch;
-  width: 100%;
 
   .group {
     display: flex;
@@ -28,12 +28,14 @@
     left: 0px;
     height: 2rem;
     margin-left: 0.375rem;
+    color: var(--theme-color-soft-text);
   }
 
   .group-end {
     right: 0px;
     height: 2rem;
     margin-right: 0.375rem;
+    color: var(--theme-color-soft-text);
   }
 
   ::slotted(*) {
