--- a/packages/core/src/components/time-picker/time-picker.scss
+++ b/packages/core/src/components/time-picker/time-picker.scss
@@ -9,6 +9,7 @@
 
 @import 'common-variables';
 @import 'mixins/shadow-dom/component';
+@import 'components/form/input';
 
 :host {
   @include ix-component;
