--- a/packages/core/scss/theme/classic-light/_fontSizes.scss
+++ b/packages/core/scss/theme/classic-light/_fontSizes.scss
@@ -14,7 +14,7 @@
       --theme-ms-0: 0.875rem;
       --theme-ms-1: 1rem;
       --theme-ms-2: 1.25rem;
-      --theme-ms-3: .15rem;
+      --theme-ms-3: 1.5rem;
       --theme-ms-4: 1.8125rem;
       --theme-ms-5: 2.1875rem;
       --theme-ms-6: 2.625rem;
