fix(core/breakcrumb): remove hover style from last breadcrumb

--- a/packages/core/src/components/breadcrumb-item/breadcrumb-item.scss
+++ b/packages/core/src/components/breadcrumb-item/breadcrumb-item.scss
@@ -58,8 +58,13 @@
 }
 
 :host(.hide-chevron) {
+  cursor: default;
   .btn {
     padding-right: 0.5rem;
+  }
+
+  .btn {
+    pointer-events: none;
   }
 }
 
